Started working on 1.16.5 compatibility - Most everything is disabled at the moment, so I can implement bits at a time - Items and blocks (along with their names and models) implemented, though they don't do anything - Network messages implemented, though they don't do anything

--- a/main/resources/assets/grapplemod/blockstates/block_grapple_modifier.json
+++ b/main/resources/assets/grapplemod/blockstates/block_grapple_modifier.json
@@ -1,5 +1,5 @@
 {
     "variants": {
-        "normal": { "model": "grapplemod:block_grapple_modifier" }
+        "": { "model": "grapplemod:block/block_grapple_modifier" }
     }
 }
