- Fix bug: wallrun time (configured w/ max_wallrun_time) being reset after a wallrun times-out so a new wallrun starts immediately after when the config option dont_override_movement_in_air is used - Updated version to v12.2

--- a/main/resources/META-INF/mods.toml
+++ b/main/resources/META-INF/mods.toml
@@ -31,7 +31,7 @@ logoFile="logo.png" #optional
 # A text field displayed in the mod UI
 credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
-authors="Isla Campbell" #optional
+authors="yyon" #optional
 # The description text for the mod (multi line!) (#mandatory)
 description='''
 A mod which adds grappling hooks.
