--- a/main/resources/assets/grapplemod/models/block/block_grapple_modifier.json
+++ b/main/resources/assets/grapplemod/models/block/block_grapple_modifier.json
@@ -1,6 +1,6 @@
 {
-  "parent": "block/cube_all",
+  "parent": "minecraft:block/cube_all",
   "textures": {
-    "all": "grapplemod:blocks/grapplemodifier"
+    "all": "grapplemod:block/grapplemodifier"
   }
 }
