--- a/gradle.properties
+++ b/gradle.properties
@@ -12,11 +12,12 @@ mappings_channel=parchment
 mappings_version=2022.03.13-1.18.2
 
 mod_id=grapplemod
-mod_name=grapplemod
+mod_name=Grappling Hook Mod
 mod_version=1.18.2-v12.3
 mod_base_package=com.yyon.grapplinghook
-mod_authors=Yyon & Nyfaria
+mod_authors=Yyon, Nyfaria, and Mayesnake
 mod_description=GrapplingHook
+mod_archive_base=grappling_hook_mod
 
 # Dependencies
 mixin_version=0.8.5
