--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,10 @@
-buildscript {
-    repositories {
-        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
-        maven { url = 'https://maven.minecraftforge.net' }
-        maven { url = 'https://maven.parchmentmc.org' }
-        mavenCentral()
-    }
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        classpath 'org.parchmentmc:librarian:1.+'
-        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7.+'
-    }
-}
 plugins {
-    id 'com.github.johnrengelman.shadow' version '7.1.0'
+    id 'eclipse'
+    id 'maven-publish'
+    id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
+    //id 'com.github.johnrengelman.shadow' version '7.1.0'
 }
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.parchmentmc.librarian.forgegradle'
-apply plugin: 'org.spongepowered.mixin'
-apply from: 'https://raw.githubusercontent.com/SizableShrimp/ForgeUpdatesRemapper/main/remapper.gradle'
-// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
 
 version = "${minecraft_version}-${mod_version}"
 group = mod_base_package // http://maven.apache.org/guides/mini/guide-naming-conventions.html
@@ -29,71 +13,70 @@ archivesBaseName = mod_archive_base
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
-println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
+println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
 minecraft {
-
     mappings channel: mappings_channel, version: mappings_version
 
-    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     runs {
         client {
-            workingDirectory project.file('run')
+            workingDirectory project.file('clientRunEnv')
 
-
+            // "SCAN": For mods scan.
+            // "REGISTRIES": For firing of registry events.
+            // "REGISTRYDUMP": For getting the contents of all registries.
             property 'forge.logging.markers', 'REGISTRIES'
-
-
             property 'forge.logging.console.level', 'debug'
 
-
-            if (project.hasProperty('mc_uuid')) {
-
+            if (project.hasProperty('mc_uuid'))
                 args '--uuid', project.getProperty('mc_uuid')
-            }
-            if (project.hasProperty('mc_username')) {
-                // Your Minecraft in-game username, not email
-                args '--username', project.getProperty('mc_username')
-            }
-            if (project.hasProperty('mc_accessToken')) {
 
+            // Display name, not email
+            if (project.hasProperty('mc_username'))
+                args '--username', project.getProperty('mc_username')
+
+            if (project.hasProperty('mc_accessToken'))
                 args '--accessToken', project.getProperty('mc_accessToken')
-            }
 
             mods {
-                "${mod_id}" {
-                    source sourceSets.main
-                }
+                "${mod_id}" { source sourceSets.main }
             }
         }
 
         server {
-            workingDirectory project.file('run')
+            workingDirectory project.file('serverRunEnv')
 
             property 'forge.logging.markers', 'REGISTRIES'
-
             property 'forge.logging.console.level', 'debug'
+            property 'forge.enabledGameTestNamespaces', 'examplemod'
 
             mods {
-                "${mod_id}" {
-                    source sourceSets.main
-                }
+                "${mod_id}" { source sourceSets.main }
+            }
+        }
+
+        gameTestServer {
+            workingDirectory project.file('serverRunEnv')
+
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
+            property 'forge.enabledGameTestNamespaces', 'examplemod'
+
+            mods {
+                "${mod_id}" { source sourceSets.main }
             }
         }
 
         data {
-            workingDirectory project.file('run')
+            workingDirectory project.file('dataRunEnv')
 
             property 'forge.logging.markers', 'REGISTRIES'
-
             property 'forge.logging.console.level', 'debug'
-
-            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', project.properties["mod_id"], '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
-                "${mod_id}" {
-                    source sourceSets.main
-                }
+                "${mod_id}" { source sourceSets.main }
             }
         }
     }
@@ -102,25 +85,7 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
-    maven {
-        name = '100Media'
-        url = 'https://maven.100media.dev/'
-    }
     maven { url "https://maven.shedaniel.me/" }
-    mavenLocal()
-}
-
-mixin {
-    add sourceSets.main, "${mod_id}.refmap.json"
-
-    config "${mod_id}.mixins.json"
-
-    debug.export = true
-}
-
-configurations {
-    implementation.extendsFrom shadow
 }
 
 dependencies {
@@ -131,8 +96,8 @@ dependencies {
     annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
 
     // Capability Syncer
-    shadow fg.deobf("dev._100media.capabilitysyncer:capabilitysyncer:${capabilitysyncer_version}")
-    implementation fg.deobf("me.shedaniel.cloth:cloth-config-forge:8.0.75")
+    //shadow fg.deobf("dev._100media.capabilitysyncer:capabilitysyncer:${capabilitysyncer_version}")
+    implementation fg.deobf("me.shedaniel.cloth:cloth-config-forge:9.0.94")
 }
 
 // This block of code expands all the gradle properties in the specified resource targets.
@@ -178,34 +143,7 @@ jar {
     }
 }
 
-def relocateTargets = ['dev._100media.capabilitysyncer']
-shadowJar {
-    archiveClassifier = ''
-    configurations = [project.configurations.shadow]
-    relocateTargets.forEach {
-        relocate it, "${project.group}.relocated.$it"
-    }
-    finalizedBy 'reobfShadowJar'
-}
-
-artifacts {
-    shadowJar
-}
-
-reobf {
-    shadowJar {}
-}
-
-afterEvaluate {
-    jar.finalizedBy reobfJar
-    reobfShadowJar.dependsOn shadowJar
-}
-
-// Example configuration to allow publishing using the maven-publish plugin
-// This is the preferred method to reobfuscate your jar file
 jar.finalizedBy('reobfJar')
-// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
-// publish.dependsOn('reobfJar')
 
 publishing {
     publications {
@@ -220,4 +158,6 @@ publishing {
     }
 }
 
-
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
+}
