oops - fix gametest namespaces even though they literally do nothing

--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            property 'forge.enabledGameTestNamespaces', 'examplemod'
+            property 'forge.enabledGameTestNamespaces', 'grapplemod'
 
             mods {
                 "${mod_id}" { source sourceSets.main }
@@ -61,7 +61,7 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
-            property 'forge.enabledGameTestNamespaces', 'examplemod'
+            property 'forge.enabledGameTestNamespaces', 'grapplemod'
 
             mods {
                 "${mod_id}" { source sourceSets.main }
