--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,28 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.19.3
-minecraft_version_range=[1.19,1.20)
-forge_version=44.1.0
-forge_version_range=[44,)
-loader_version_range=[44,)
-mappings_channel=parchment
-mappings_version=2023.03.12-1.19.3
+# -- Versioning
+mod_version=1.19.4-v13
+minecraft_version=1.19.4
+minecraft_version_range=[1.19.4,1.20)
+forge_version=45.0.6
+forge_version_range=[45,)
+loader_version_range=[45,)
 
+mappings_channel=official
+mappings_version=1.19.4
+
+# -- Metadata
 mod_id=grapplemod
 mod_name=Grappling Hook Mod
-mod_version=1.19.3-v13
 mod_base_package=com.yyon.grapplinghook
 mod_authors=Yyon, Nyfaria, and Mayesnake
 mod_description=GrapplingHook
 mod_archive_base=grappling_hook_mod
 
-# Dependencies
+# -- Dependencies
 mixin_version=0.8.5
-clothconfig_version=9.0.94
+
+# Cloth Config
+clothconfig_version=10.0.96
+clothconfig_version_range=[10,11)
