--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -40,6 +40,6 @@ side="BOTH"
 [[dependencies.${mod_id}]]
     modId="cloth_config"
     mandatory=true
-    versionRange="[9, 10)"
+    versionRange="${clothconfig_version_range}"
     ordering="NONE"
     side="BOTH"
