--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ minecraft {
     runs {
 
         client {
-            workingDirectory = project.file('clientRunEnv')
+            workingDirectory = project.file('testEnv/client')
 
             // "SCAN": For mods scan.
             // "REGISTRIES": For firing of registry events.
@@ -45,7 +45,7 @@ minecraft {
         }
 
         server {
-            workingDirectory = project.file('serverRunEnv')
+            workingDirectory = project.file('testEnv/server')
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
@@ -57,7 +57,7 @@ minecraft {
         }
 
         gameTestServer {
-            workingDirectory = project.file('serverRunEnv')
+            workingDirectory = project.file('testEnv/server')
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
@@ -69,7 +69,7 @@ minecraft {
         }
 
         data {
-            workingDirectory = project.file('dataRunEnv')
+            workingDirectory = project.file('testEnv/data')
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
