--- a/src/main/resources/assets/grapplemod/models/item/launcheritem.json
+++ b/src/main/resources/assets/grapplemod/models/item/launcheritem.json
@@ -1,6 +1,6 @@
 {
     "parent": "item/handheld",
     "textures": {
-        "layer0": "grapplemod:items/launcheritem"
+        "layer0": "grapplemod:item/launcheritem"
     }
 }
