--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.19.3
+minecraft_version=1.19.4
 minecraft_version_range=[1.19,1.20)
-forge_version=44.1.23
-forge_version_range=[43,)
-loader_version_range=[43,)
+forge_version=45.0.18
+forge_version_range=[45,)
+loader_version_range=[45,)
 mappings_channel=parchment
-mappings_version=2023.03.12-1.19.3
+mappings_version=1.19.3-2023.03.12-1.19.4
 
 mod_id=grapplemod
 mod_name=Grappling Hook Mod
-mod_version=1.19.3-v13
+mod_version=1.19.4-v13
 mod_base_package=com.yyon.grapplinghook
 mod_authors=Yyon, Nyfaria, and Mayesnake
 mod_description=GrapplingHook
