--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,19 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.19.4
-minecraft_version_range=[1.19,1.20)
-forge_version=45.0.18
-forge_version_range=[45,)
-loader_version_range=[45,)
+minecraft_version=1.20.1
+minecraft_version_range=[1.20,1.21)
+forge_version=47.1.0
+# The forge version range can use any version of forge or match the loader version range
+forge_version_range=[47,)
+# The loader version range can only be the major version of Forge/FML
+loader_version_range=[47,)
 mappings_channel=parchment
-mappings_version=1.19.3-2023.03.12-1.19.4
+mappings_version=2023.07.09-1.20.1
 
 mod_id=grapplemod
 mod_name=Grappling Hook Mod
-mod_version=1.19.4-v13
+mod_version=1.20.1-v13
 mod_base_package=com.yyon.grapplinghook
 mod_authors=Yyon, Nyfaria, and Mayesnake
 mod_description=GrapplingHook
@@ -21,4 +23,4 @@ mod_archive_base=grappling_hook_mod
 
 # Dependencies
 mixin_version=0.8.5
-capabilitysyncer_version=1.19-3.0.1
+capabilitysyncer_version=1.20.1-4.0.0
